fix: olympics logo size and countdown on mobile

--- a/OlympicsWebsite/src/app/landing-page/landing-page.component.css
+++ b/OlympicsWebsite/src/app/landing-page/landing-page.component.css
@@ -182,7 +182,7 @@ h1 {
     }
 
     .hours, .minutes, .days, .seconds, .time-indicator {
-        font-size: 4.5vw;
+        font-size: 3.5vw;
     }
 
     .timer {
